--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -4,21 +4,19 @@
      {{>head}}
 </head>
 <body>    
-       
-       {{>nav}}
-        <!-- HOME CONTAINER -->
-        <div class="home">
-            <div class="left_box">
-                <p>Welcome to Albino Dictionary</p>
-                <h1>Explore A <span id="main_word">Word</span>  Everyday</h1>
-                <a href="/dic"><button>Explore</button></a>
-            </div>
-            <div class="right_box">
-                <img src="./img/home.webp" alt="">
-            </div>
-
+    {{>nav}}
+    <!-- HOME CONTAINER -->
+    <div class="home">
+        <div class="left_box">
+            <p>Welcome to Albino Dictionary</p>
+            <h1>Explore A <span id="main_word">Word</span>  Everyday</h1>
+            <a href="/dic"><button>Explore</button></a>
         </div>
-
-        {{>foot}}
+        <div class="right_box">
+            <img src="./img/home.webp" alt="">
+        </div>
+    </div>
+    {{>foot}}
+    <script src="js/main.js"></script>
 </body>
 </html>
