--- a/template/partial/head.hbs
+++ b/template/partial/head.hbs
@@ -1,6 +1,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/05a7bcfe55.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <title>Albino Dictionary - Get Every Word Here</title>
