--- a/template/partial/nav.hbs
+++ b/template/partial/nav.hbs
@@ -1,8 +1,12 @@
  <nav class="navbar">
-            <div class="logo">
+            <div class="logo" id="logo">
                 <a href="/">Albino Dictionary</a> 
             </div>
-            <div class="main-nav">
+            <div class="bars">
+                <i class="fa fa-bars" id="burger"></i>
+                <i class="fa fa-times" style="visibility: hidden;" id="cross"></i>
+            </div>
+            <div class="main-nav" id="main_nav">                
                 <li><a href="/">Home</a> </li>
                 <li><a href="/dic">Search Word</a> </li>
             </div>
