--- a/template/views/dic.hbs
+++ b/template/views/dic.hbs
@@ -14,7 +14,9 @@
              </form>
          </div>
          <div class="dic_box">
-             <div class="dic_name">Get Output Here</div>
+             <div id="output_box">
+                <div class="dic_name">Get Output Here</div>
+             </div>
              <div class="result_box">
                  <h1>Meaning:</h1>
                  <div class="dic_result" id="mean_results"></div>
